--- a/shard.yml
+++ b/shard.yml
@@ -7,10 +7,10 @@ authors:
 dependencies:
   radix:
     github: luislavena/radix
-    version: ~> 0.4.0
+    version: ~> 0.4.1
   kilt:
     github: jeromegn/kilt
-    version: ~> 0.4.0
+    version: ~> 0.6.1
   exception_page:
     github: crystal-loot/exception_page
     version: ~> 0.1.1
@@ -20,6 +20,6 @@ development_dependencies:
     github: crystal-ameba/ameba
     version: ~> 0.14.0
 
-crystal: ">= 0.36.0"
+crystal: "< 2.0.0"
 
 license: MIT
